# iree-template-cpp

./: CMakeLists.txt
vmfb_embedding/: CMakeLists.txt  iree_run_embedded_vmfb.cc
